tests/NormalTests/paczka2/big_fuzzy/39266740.err
Error in line 1: RlMAqTw S342 91,9
Error in line 4: S342 S221 8,0
Error in line 6: S342 S342 13,0
Error in line 13: GuQGZXoLm S342 93,9
Error in line 14: z2gHBKy S342 18,6
Error in line 31: 2jTA S342 25,80
Error in line 2: RlMAqTw S221 82,4
Error in line 41: 2jTA S342 908,5
Error in line 52: GuQGZXoLm A560 194,4
Error in line 51: S342 A560 39,9
Error in line 47: GebDUV S342 84,9
Error in line 58: RlMAqTw S342 479,6
Error in line 57: z2gHBKy S221 23,6
Error in line 83: GuQGZXoLm S901 27,4
Error in line 91: z2gHBKy A560 82,6
Error in line 82: S342 S342 80,3
Error in line 96: 2jTA S901 99,4
Error in line 99: 2jTA A560 48,3
Error in line 89: GuQGZXoLm S342 67,5
Error in line 124: SA7jf S901 9,97
Error in line 130: z2gHBKy S221 21,3
Error in line 132: GebDUV A560 84,6
Error in line 131: S342 S342 23,9
Error in line 142: S342 S901 4,7
Error in line 146: RlMAqTw S221 43,6
Error in line 151: RlMAqTw A560 33,4
Error in line 160: 2jTA S*42 *7,1
Error in line 162: GuQGZXoLm S342 44,9
Error in line 184: RlMAqTw A560 23,5
Error in line 190: S342 S221 74,8
Error in line 191: S342 A560 0,0
Error in line 197: S342 S221 59,9
Error in line 182: GebDUV S221 280,1
Error in line 188: 2jTA S342 6,7
Error in line 206: GebDUV S342 30,7
Error in line 205: S342 S342 100,0
Error in line 209: S342 S221 17,3
Error in line 216: GuQGZXoLm S221 5,0
Error in line 214: GebDUV S901 35,0
Error in line 231: z2gHBKy S221 64,2
Error in line 236: z2gHBKy A560 53,5
Error in line 239: GebDUV S342 59,1
Error in line 245: 2jTA S901 5,8
